[package]
name = "risc0-steel"
description = "Query Ethereum state, or any other EVM-based blockchain state within the RISC Zero zkVM."
version = "0.14.0-alpha.1"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy = { workspace = true, optional = true, features = ["eips", "network", "provider-http", "rpc-types"] }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true, optional = true }
nybbles = { workspace = true, features = ["serde"] }
once_cell = { workspace = true }
reqwest = { workspace = true, optional = true }
revm = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

blst = { version = "0.3.11", optional = true }
bs58 = { version = "0.5", optional = true }
c-kzg = { version = "1.0", optional = true }
enr = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
integer-sqrt = { version = "0.1.5", optional = true }
multiaddr = { version = "0.18", optional = true }
multihash = { version = "0.18", default-features = false, features = [
    "std",
    "multihash-impl",
    "identity",
    "sha2",
], optional = true }
rand = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "84ef2b71aa004f6767420badb42c902ad56b8b72", optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["contract", "node-bindings"] }
alloy-trie = { workspace = true }
bincode = { workspace = true }
risc0-steel = { path = ".", features = ["host"] }
serde_json = { workspace = true }
test-log = { workspace = true }

[features]
default = []
host = [
    "ethereum-consensus",
    "dep:alloy",
    "dep:log",
    "dep:reqwest",
    "dep:serde_json",
    "dep:tokio",
    "dep:url",
]

# dependencies required by ethereum_consensus
ethereum-consensus = [
    "dep:blst",
    "dep:bs58",
    "dep:c-kzg",
    "dep:enr",
    "dep:hex",
    "dep:integer-sqrt",
    "dep:multiaddr",
    "dep:multihash",
    "dep:rand",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:ssz_rs"
]
